--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/Google_Icons-09-512.webp">
-    <title>Document</title>
+    <title>Google</title>
 </head>
 <body>
     <div class="container">
