--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </section>
                 <section class="barrapes">
                     <img src="img/search_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <input class="search" type="text" alt="">
                     <div class="icons">
                         <img src="img/keyboard_FILL0_wght400_GRAD0_opsz24.png" alt="">
                         <img src="img/download__1_-removebg-preview.png" alt="" width="20px" height="20px">
@@ -35,8 +36,8 @@
                     </div>
                 </section>
                 <section class="itens">
-                    <div class="item">Pesquisa Google</div>
-                    <div class="item">Estou com sorte</div>
+                    <div class="item"><a href="">Pesquisa Google</a></div>
+                    <div class="item"><a href="">Estou com sorte</a></div>
                 </section>
             </main>
         </div>
@@ -48,17 +49,17 @@
             <div class="f2">
                     <div class="m1">
                         <ul>
-                            <li>Sobre</li>
-                            <li>Publicidade</li>
-                            <li>Negócios</li>
-                            <li>Como funciona a pesquisa</li>
+                            <li><a href="">Sobre</a></li>
+                            <li><a href="">Publicidade</a></li>
+                            <li><a href="">Negócios</a></li>
+                            <li><a href="">Como funciona a pesquisa</a></li>
                         </ul>
                     </div>
                     <div class="m2">
                         <ul>
-                            <li>Privacidade</li>
-                            <li>Termos</li>
-                            <li>Configurações</li>
+                            <li><a href="">Privacidade</a></li>
+                            <li><a href="">Termos</a></li>
+                            <li><a href="">Configurações</a></li>
                         </ul>
                     </div>
             </div>
