--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img class="imgprin" src="img/celebrating-james-baldwin-6753651837110181-ldrk.png" alt="">
                     </div>
                 </section>
-                <section class="barrapes" >
+                <section class="barrapes" id="pes">
                     <img src="img/search_FILL0_wght400_GRAD0_opsz24.png" alt="">
                     <input class="search" type="text" alt="">
                     <div class="icons">
@@ -65,6 +65,7 @@
             </div>
         </footer>
     </div>
-    <script src=""></script>
+    <script src="script.js
+    "></script>
 </body>
 </html>
