--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <header>
                 <div class="menu">
                     <ul>
-                        <li><a href="">Gmail</a></li>
-                        <li><a href="">Imagens</a></li>
-                        <li><a href="">Menu</a></li>
-                        <a href=""><img class="user" src="img/unnamed.jpg" alt=""></a>
+                        <li><a href="#">Gmail</a></li>
+                        <li><a href="#">Imagens</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <a href="#"><img class="user" src="img/unnamed.jpg" alt=""></a>
                     </ul>
                 </div>
             </header>
@@ -36,30 +36,34 @@
                     </div>
                 </section>
                 <section class="itens">
-                    <div class="item"><a href="">Pesquisa Google</a></div>
-                    <div class="item"><a href="">Estou com sorte</a></div>
+                    <div class="item"><a href="#">Pesquisa Google</a></div>
+                    <div class="item"><a href="#">Estou com sorte</a></div>
                 </section>
             </main>
         </div>
+        <label for="switch" id="switch">
+            <span id="switch-text">Light mode</span> 
+            <input type="checkbox" id="switch-check">
+        </label>
         <footer>
             <div class="f1">
                 Brasil
             </div>
-            <hr>
+            <hr class="hr">
             <div class="f2">
                     <div class="m1">
                         <ul>
-                            <li><a href="">Sobre</a></li>
-                            <li><a href="">Publicidade</a></li>
-                            <li><a href="">Negócios</a></li>
-                            <li><a href="">Como funciona a pesquisa</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Publicidade</a></li>
+                            <li><a href="#">Negócios</a></li>
+                            <li><a href="#">Como funciona a pesquisa</a></li>
                         </ul>
                     </div>
                     <div class="m2">
                         <ul>
-                            <li><a href="">Privacidade</a></li>
-                            <li><a href="">Termos</a></li>
-                            <li><a href="">Configurações</a></li>
+                            <li><a href="#">Privacidade</a></li>
+                            <li><a href="#">Termos</a></li>
+                            <li><a href="#" class="config">Configurações</a></li>
                         </ul>
                     </div>
             </div>
