--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </main>
         </div>
         <label for="switch" id="switch">
-            <span id="switch-text">Light mode</span> 
+            <span id="switch-text">Dark mode</span> 
             <input type="checkbox" id="switch-check">
         </label>
         <footer>
